# holiday-event-api-rust

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: example.rs
src/: lib.rs  model.rs
testdata/: getEventInfo-default.json  getEventInfo-parameters.json  getEventInfo-starter.json  getEvents-parameters.json  search-default.json
